[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Plunge"
version = "0.0.6"
authors = [
  { name="Gustavo Ortiz", email="gstvortiz@hotmail.com" },
]
description = "Presenting additional features for Data Analysis."
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[options]
install_requires = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/gstvortiz/Plunge"
Issues = "https://github.com/gstvortiz/Plunge/issues"